--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,9 @@ repos:
   rev: v4.1.0
   hooks:
   - id: trailing-whitespace
+    exclude: ^docs/doxystyle
   - id: end-of-file-fixer
+    exclude: ^docs/doxystyle
   - id: check-yaml
   - id: debug-statements
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
@@ -45,3 +47,4 @@ repos:
   hooks:
   - id: clang-format
     args: [-i]
+    exclude: ^docs/doxystyle
