--- a/.github/workflows/check_doxygen_awesome_version.yml
+++ b/.github/workflows/check_doxygen_awesome_version.yml
@@ -2,9 +2,8 @@ name: Auto-update doxygen-awesome
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-    - main
+  schedule:
+  - cron: 0 2 * * 1
 
 jobs:
   check-for-updates:
@@ -24,7 +23,7 @@ jobs:
         # NOTE: In a later runs of CI we will search for PR with this exact
         #       title. Only if no such PR exists will the script create a
         #       new PR.
-        PR_TITLE="Update doxygen-awesome to ${VERSION}"
+        PR_TITLE="[docs] Update doxygen-awesome to ${VERSION}"
 
         if [[ -z "$(git status --porcelain)" ]]
         then
