TODO: Switching off workaround

--- a/environment.yaml
+++ b/environment.yaml
@@ -8,6 +8,7 @@ dependencies:
 - eigen
 - gmatelastic
 - gmatelastoplasticqpot
+- qpot <0.12.0 # remove when "gmatelastoplasticqpot" is updated
 - mathjax
 - ninja
 - numpy
