todo: working around xtensor bug, and outdated GMat modules

--- a/docs/examples/environment.yaml
+++ b/docs/examples/environment.yaml
@@ -9,7 +9,7 @@ dependencies:
 - gmatelastoplastic
 - gmatelastoplasticfinitestrainsimo
 - gmatelastoplasticqpot
-- gmatelastoplasticqpot
+- qpot <0.12.0 # remove when "gmatelastoplasticqpot" is updated
 - gmatnonlinearelastic
 - h5py
 - highfive
