--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,13 +66,10 @@ jobs:
       run: ctest --output-on-failure
 
     - name: Build and install Python module
-      run: python setup.py install --build-type Release -vv
+      run: python -m pip install . -v
 
     - name: Run Python tests
-      working-directory: tests/basic-python
-      run: |
-        python version.py
-        python MeshQuad4.py
+      run: python -m unittest discover tests
 
     - name: Build doxygen-docs (error on warning)
       if: runner.os == 'macOS'
@@ -115,10 +112,7 @@ jobs:
         environment-name: myenv
 
     - name: Build and install Python module
-      run: python -m pip install . -vvv
+      run: python -m pip install . -v
 
     - name: Run Python tests
-      working-directory: tests/basic-python
-      run: |
-        python version.py
-        python MeshQuad4.py
+      run: python -m unittest discover tests
