--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,15 +18,12 @@ jobs:
         include:
         - runs-on: ubuntu-latest
           config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1 -DBUILD_EXAMPLES=1
-          conda: docs/examples/environment.yaml
           prop: tests & examples
         - runs-on: macos-latest
           config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1 -DBUILD_DOCS=1
-          conda: environment.yaml
           prop: tests
         - runs-on: windows-latest
           config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1 -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
-          conda: environment.yaml
           prop: tests
 
     defaults:
@@ -44,7 +41,7 @@ jobs:
     - name: Set conda environment
       uses: mamba-org/provision-with-micromamba@main
       with:
-        environment-file: ${{ matrix.conda }}
+        environment-file: environment.yaml
         environment-name: myenv
 
     - name: Install clang
