[CI] Running everything on Linux. Switching-off C++ tests on Windows (for speed, everything will be in Python at some point)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,11 @@ jobs:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
         include:
         - runs-on: ubuntu-latest
-          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1 -DBUILD_EXAMPLES=1
-          prop: tests & examples
+          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_ALL=1
         - runs-on: macos-latest
-          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1 -DBUILD_DOCS=1
-          prop: tests
+          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1
         - runs-on: windows-latest
-          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1 -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
-          prop: tests
+          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_ALL=1 -G Ninja
 
     defaults:
       run:
@@ -43,10 +40,7 @@ jobs:
       with:
         environment-file: environment.yaml
         environment-name: myenv
-
-    - name: Install clang
-      if: runner.os == 'Windows'
-      run: micromamba install -c conda-forge clang_win-64 ninja
+        cache-env: true
 
     - name: Set dummy version
       run: echo "SETUPTOOLS_SCM_PRETEND_VERSION=0.0" >> $GITHUB_ENV
@@ -54,11 +48,30 @@ jobs:
     - name: Configure using CMake
       run: cmake -Bbuild ${{ matrix.config }}
 
-    - name: Build C++ ${{ matrix.prop }}
+    - name: Build doxygen-docs
+      if: runner.os == 'Linux'
+      working-directory: build
+      run: |
+        make html
+        cat doxygen_warnings.log
+
+    - name: Require minimal documentation
+      if: runner.os == 'Linux'
+      working-directory: build
+      run: if grep -q "not documented" doxygen_warnings.log ; then exit 1; fi
+
+    - name: Build sphinx-docs
+      if: runner.os == 'Linux'
+      working-directory: docs
+      run: make html
+
+    - name: Build C++
+      if: runner.os != 'Windows'
       working-directory: build
       run: cmake --build .
 
-    - name: Run C++ ${{ matrix.prop }}
+    - name: Run C++
+      if: runner.os != 'Windows'
       working-directory: build
       run: ctest --output-on-failure
 
@@ -76,52 +89,3 @@ jobs:
         python partial-periodic_elastic.py
         python periodic_elastoplastic.py
         python periodic_elastoplastic_finite-strain.py
-
-    - name: Build doxygen-docs
-      if: runner.os == 'macOS'
-      working-directory: build
-      run: |
-        make html
-        cat doxygen_warnings.log
-        cat doxygen_warnings.log | grep -q "not documented" || echo "Fix not documented!" && exit 1
-
-    - name: Build sphinx-docs
-      if: runner.os == 'macOS'
-      working-directory: docs
-      run: make html
-
-  py:
-
-    strategy:
-
-      fail-fast: false
-
-      matrix:
-        runs-on: [windows-latest]
-        include:
-        - runs-on: windows-latest
-          conda: .ci_environment_py.yaml
-
-    defaults:
-      run:
-        shell: bash -l {0}
-
-    name: ${{ matrix.runs-on }} • x64 ${{ matrix.args }} • py
-    runs-on: ${{ matrix.runs-on }}
-
-    steps:
-
-    - name: Basic GitHub action setup
-      uses: actions/checkout@v2
-
-    - name: Set conda environment
-      uses: mamba-org/provision-with-micromamba@main
-      with:
-        environment-file: ${{ matrix.conda }}
-        environment-name: myenv
-
-    - name: Build and install Python module
-      run: python -m pip install . -v
-
-    - name: Run Python tests
-      run: python -m unittest discover tests
