--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ string(TOUPPER "${PROJECT_NAME}" PROJECT_NAME_UPPER)
 option(BUILD_ALL "${PROJECT_NAME}: Build tests, Python API & docs" OFF)
 option(BUILD_TESTS "${PROJECT_NAME}: Build tests" OFF)
 option(BUILD_PYTHON "${PROJECT_NAME}: Build Python API" OFF)
-option(BUILD_DOCS "${PROJECT_NAME}: Build docs" OFF)
+option(BUILD_DOCS "${PROJECT_NAME}: Build docs (use `make html`)" OFF)
 option(USE_WARNINGS "${PROJECT_NAME}: Build with runtime warnings" ON)
 option(USE_ASSERT "${PROJECT_NAME}: Build with assertions" ON)
 option(USE_DEBUG "${PROJECT_NAME}: Build in debug mode" OFF)
@@ -200,6 +200,7 @@ if(BUILD_DOCS OR BUILD_ALL)
     set(DOXYGEN_QUIET YES)
     set(DOXYGEN_WARN_IF_UNDOCUMENTED YES)
     set(DOXYGEN_WARN_AS_ERROR NO)
+    set(DOXYGEN_HTML_COLORSTYLE TOGGLE)
     set(DOXYGEN_WARN_LOGFILE "${CMAKE_CURRENT_BINARY_DIR}/doxygen_warnings.log")
     set(DOXYGEN_ALIASES "license=@par License:")
     set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "README.md")
