--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,11 +1,7 @@
-# .readthedocs.yml
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
 sphinx:
   configuration: docs/conf.py
 
 version: 2
 
 conda:
-  environment: .readthedocsenv.yml
+  environment: environment.yaml
