--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,18 @@
 repos:
 - repo: https://github.com/psf/black
-  rev: 22.3.0
+  rev: 22.10.0
   hooks:
   - id: black
     args: [--safe, --quiet, --line-length=100]
-    exclude: ^docs/doxystyle
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.2.0
+  rev: v4.3.0
   hooks:
   - id: trailing-whitespace
-    exclude: ^docs/doxystyle
   - id: end-of-file-fixer
-    exclude: ^docs/doxystyle
   - id: check-yaml
   - id: debug-statements
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-  rev: v2.3.0
+  rev: v2.4.0
   hooks:
   - id: pretty-format-yaml
     args: [--autofix, --indent, '2']
@@ -25,26 +22,34 @@ repos:
   - id: autoflake
     args: [--in-place, --remove-unused-variable, --remove-all-unused-imports]
 - repo: https://github.com/asottile/reorder_python_imports
-  rev: v3.0.1
+  rev: v3.8.5
   hooks:
   - id: reorder-python-imports
 - repo: https://github.com/asottile/pyupgrade
-  rev: v2.32.0
+  rev: v3.1.0
   hooks:
   - id: pyupgrade
     args: [--py36-plus]
 - repo: https://github.com/PyCQA/flake8
-  rev: 4.0.1
+  rev: 5.0.4
   hooks:
   - id: flake8
     args: [--max-line-length=100]
 - repo: https://github.com/asottile/setup-cfg-fmt
-  rev: v1.20.1
+  rev: v2.1.0
   hooks:
   - id: setup-cfg-fmt
+- repo: https://github.com/tdegeus/cpp_comment_format
+  rev: v0.2.0
+  hooks:
+  - id: cpp_comment_format
 - repo: https://github.com/pocc/pre-commit-hooks
   rev: v1.3.5
   hooks:
   - id: clang-format
     args: [-i]
-    exclude: ^docs/doxystyle
+- repo: https://github.com/tdegeus/conda_envfile
+  rev: v0.4.1
+  hooks:
+  - id: conda_envfile_parse
+    files: environment.yaml
