--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,8 +19,8 @@ repos:
   hooks:
   - id: black
     args: [--safe, --quiet, --line-length=100]
-- repo: https://github.com/humitos/mirrors-autoflake.git
-  rev: v1.1
+- repo: https://github.com/PyCQA/autoflake
+  rev: v2.2.1
   hooks:
   - id: autoflake
     args: [--in-place, --remove-unused-variable, --remove-all-unused-imports]
