--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,7 +1,17 @@
+version: 2
+
 sphinx:
   configuration: docs/conf.py
 
-version: 2
+build:
+  os: ubuntu-lts-latest
+  tools:
+    python: mambaforge-latest
 
 conda:
   environment: environment.yaml
+
+python:
+  install:
+  - method: pip
+    path: .
