--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,5 +13,5 @@ jobs:
     - uses: actions/checkout@main
     - uses: actions/setup-python@main
       with:
-        python-version: '>=3.11'
+        python-version: '3.11'
     - uses: pre-commit/action@main
